--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,17 @@
         }
     ],
     "require": {
-        "slim/slim": "~3.4.2"
+        "php": ">=7.0",
+        "slim/slim": "~3.4.2",
+        "gabordemooij/redbean": "~4.3.2"
     },
     "require-dev": {
         "codeception/codeception": "^2.2",
         "squizlabs/php_codesniffer": "^2.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Todos\\": "src/"
+        }
     }
 }
