--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
         "psr-4": {
             "Todos\\": "src/"
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php -r \"if (!is_file('.env')) copy('.env.example', '.env');\""
+        ]
     }
 }
