--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
 api:
-  build: .
+  image: todos-back
   ports:
-    - 8080:8080
-  working_dir: /usr/src/app
+    - 8080:80
   links:
     - database:database
-  volumes:
-    - .:/usr/src/app
-  command: php -S 0.0.0.0:8080 -t ./public/
 tester:
   image: todos-back:dev
-  working_dir: /usr/src/app
   links:
     - api:api
     - database:database
-  volumes:
-    - .:/usr/src/app
 database:
   image: mariadb:5.5
   ports:
