--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,12 @@
 FROM todos-back
 
+# Install debug extensions
 RUN pecl install xdebug && \
     echo "zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so" > /usr/local/etc/php/conf.d/xdebug.ini
+
+# Install composer dev packages
 RUN ./composer.phar install
+
+# Copy test code
+COPY ./tests ./tests
+COPY ./codeception.yml ./
