--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,7 +5,7 @@ RUN pecl install xdebug && \
     echo "zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so" > /usr/local/etc/php/conf.d/xdebug.ini
 
 # Install composer dev packages
-RUN ./composer.phar install
+RUN composer install
 
 # Copy test code
 COPY ./tests ./tests
